# dezero3

./: .gitignore  README.md  main.py  pyproject.toml
dezero/: core.py
src/dezero/: core.py  utils.py
steps/: step08.py  step09.py
tests/: core_test.py  utils_test.py
