[project]
name = "dezero3"
version = "0.1.0"
description = "Deep Learning from Scratch 3 (O'Reilly Japan, Koki Satito)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.1",
]

[dependency-groups]
dev = [
    "devtools>=0.12.2",
    "ipython>=9.9.0",
    "pytest>=9.0.2",
]
